# fdam

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  index.html
fam-hw-generator/model/sw/cpp/: CMakeLists.txt
fam-hw-generator/model/sw/cpp/src/: main.cpp
fam-hw-generator/model/sw/java/: CMakeLists.txt
fam-hw-generator/src/: create_fam_project.py  make_arbiter_controller_rd_req_tree.py  make_fifo.py  make_input_queue_controller.py  make_output_queue_controller.py  update_sources.py  utils.py
fam-samples/: README.md
fam-sw/: CMakeLists.txt
fam-sw/cpp/: CMakeLists.txt
fam-sw/cpp/include/: AccManagement.h  AccManagementDEFS.h  opae_svc_wrapper.h
fam-sw/cpp/include/fam/: Accelerator.h  csr_mgr.h
fam-sw/cpp/src/: Accelerator.cpp
fam-sw/fam-cpp/: CMakeLists.txt
fam-sw/fam-cpp/doc/: Doxyfile.in  doxygen.cmake
fam-sw/fam-cpp/src/: AccManagement.cpp  Accelerator.cpp  fam.cmake  opae_svc_wrapper.cpp
fam-sw/fam-java/: CMakeLists.txt
fam-sw/fam-java/swig/: fam.i.in
fam-sw/java/: CMakeLists.txt
fam-sw/java/swig/: AccManagement.i  AccManagementAse.i
fdam-cgra/cgra-samples/: README.md
fdam-cgra/cgra-sw/: CMakeLists.txt
fdam-cgra/cgra-sw/doc/: Doxyfile.in  doxygen.cmake
fdam-cgra/cgra-sw/include/cgra/: cgra.h  cgra_defs.h
fdam-cgra/cgra-sw/src/: cgra.cmake  cgra.cpp
fdam-hw-generator/src/: create_fdam_project.py  make_acc.py  make_acc_management.py  make_acc_user.py  make_arbiter.py  make_arbiter_controller_rd_req_tree.py  make_arbiter_controller_wr_req_tree.py  make_conf_receiver.py  make_counter.py  make_dsm_controller.py  make_fifo.py  make_input_queue_controller.py  make_output_queue_controller.py  make_priority_encoder.py  make_reg_tree_pipeline.py  make_select.py  update_sources.py  utils.py
fdam-samples/: README.md
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/: CMakeLists.txt  kmeans_4_4.cgra  out.txt
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/cgra_prog_files/: fir.cgra  kmeans.cgra  loopback_1_8.cgra  sobel_filter.cgra  vetorial_sum.cgra
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/dot_files/: fir.dot  loopback.dot  vetorial_sum.dot
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/fir_files/: fir.cgra
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/include/: Paeth.h  Samples.h  SobelFilter.h  common.h  main.h  samples.h  test.h
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/kmeans_files/: kmeans.cgra
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/loopback_files/: loopback.cgra
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/paeth_files/: paeth.cgra
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/sobel_files/: img_contour_cgra.gray  img_contour_cpu.gray  img_contour_cpu2.gray  sobel_filter.cgra  sobel_filter.dot
fdam-samples/fdam-cgra-samples/cgra_128/sw/cpp/src/: FIR.cpp  Kmeans.cpp  LoopBack.cpp  Paeth.cpp  Samples.cpp  SobelFilter.cpp  main.cpp  samples.cpp  test.cpp
fdam-samples/fdam-cgra-samples/cgra_128_radix8/sw/cpp/Mibench/: CMakeLists.txt  mibench.cpp  mibench.h
fdam-samples/fdam-cgra-samples/cgra_128_radix8/sw/cpp/Sgfilter/: CMakeLists.txt  sgfilter.cpp  sgfilter.h
fdam-samples/loopback/sw/cpp/: CMakeLists.txt
fdam-samples/loopback/sw/cpp/include/: main.h
fdam-samples/loopback/sw/cpp/src/: main.cpp
fdam-sw/fdam-cpp/: CMakeLists.txt  CMakeLists.txt.clion
fdam-sw/fdam-cpp/doc/: doxygen.cmake
fdam-sw/fdam-cpp/include/fdam/: AccManagement.h  Accelerator.h
fdam-sw/fdam-cpp/include/fdam/acc/: acc_management.h  accelerator.h  csr_mgr.h
fdam-sw/fdam-cpp/include/fdam/cgra/: abs.h  add.h  and.h  beq.h  bne.h  cgra.h  cgra_arch.h  cgra_arch_defs.h  cgra_defs.h  data_flow.h  data_flow_defs.h  global.h  input_stream.h  max.h  min.h  mult.h  mux.h  not.h  omega.h  operator.h  or.h  output_stream.h  pass_a.h  pass_b.h  path_finder.h  pe_arch.h  scheduler.h  scheduler_defs.h  sgt.h  shl.h  shr.h  slt.h  sub.h  switch.h  xor.h
fdam-sw/fdam-cpp/src/: AccManagement.cpp  Accelerator.cpp  acc_management.cpp  accelerator.cpp  cgra.cpp  fdam.cmake  opae_svc_wrapper.cpp
fdam-sw/fdam-cpp/src/acc/: accelerator.cpp  opae_svc_wrapper.cpp
fdam-sw/fdam-cpp/src/cgra/: cgra.cpp  cgra_arch.cpp  data_flow.cpp  global.cpp  omega.cpp  operator.cpp  path_finder.cpp  pe_arch.cpp  scheduler.cpp  switch.cpp
fdam-sw/fdam-java/: CMakeLists.txt
fdam-sw/fdam-java/swig/: fdam.i.in
hw/afu_manager_generator/: generate.py  input_queue_controller.py  make_acc.py  make_acc_management.py  make_afu.py  (+20 more)
samples/: README.md
samples/loopback/sw/: CMakeLists.txt  main.cpp
samples/loopback/sw/cpp/: CMakeLists.txt
samples/loopback/sw/cpp/include/: main.h
samples/loopback/sw/cpp/src/: Loopback.cpp
samples/loopback/sw/java/: CMakeLists.txt
samples/loopback/sw/java/src/: Loopback.java
samples/reduce_sum/sw/: CMakeLists.txt  main.cpp
scripts/: create_fdam_acc_project.sh  create_fdam_cgra_project.sh  create_fdam_project.sh  install.sh  setup.eda  setup.fam  setup.fdam
sw/: AFU.cpp  AFU.h  AFUManager.cpp  AFUManager.h  AFU_DEFS.h  CMakeLists.txt  SubAFU.cpp  SubAFU.h  main.cpp
sw/AFUManagerLIB/: AFU.cpp  AFU.h  AFUManager.cpp  AFUManager.h  AFUManagerDEFS.h  CMakeCache.txt  CMakeLists.txt  Makefile  afu_manager_include.mk  cmake_install.cmake  csr_mgr.h  opae_svc_wrapper.cpp  opae_svc_wrapper.h
sw/AFUManagerLIB/include/: AFU.h  AFUManager.h  AFUManagerDEFS.h
sw/AFUManagerLIB/lib/: AFU.cpp  AFUManager.cpp
sw/FamLIB/: CMakeLists.txt
sw/FamLIB/include/: AccManagement.h  Accelerator.h
sw/FamLIB/lib/: AccManagement.cpp  Accelerator.cpp
sw/cpp/: CMakeLists.txt
sw/cpp/doc/: Doxyfile.in
sw/cpp/include/: AccManagement.h  AccManagementDEFS.h  Accelerator.h
sw/cpp/include/fdam/acc/: acc_management.h  acc_management_defs.h  opae_svc_wrapper.h
sw/cpp/src/: AccManagement.cpp  Accelerator.cpp  fdam.cmake  opae_svc_wrapper.cpp
sw/cpp/src/acc/: acc_management.cpp  opae_svc_wrapper.cpp
sw/cpp/test/: main.cpp
sw/java/: CMakeLists.txt
sw/java/swig/: AccManagement.i  AccManagementAse.i  fdam.i.in
sw/test/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  main_ase
(+1371 files in other folders)
